<resources>
    <string name="app_name">Fresh Foods xx-xx-xxxx</string>

    <string name="product_shelf_fragment_title">Fresh Foods App</string>

    <!--choose a product container-->
    <string name="clear_product_button_text">new</string>
    <string name="choose_a_product_autocomplete_hint">Choose a product</string>

    <!--enter product layout-->
    <string name="enter_product_text_field_label">Product Title/Description</string>
    <string name="expiry_date_text_field_label">Expiry date xx-xx-xxxx</string>
    <string name="expiry_date_text">Expiry date</string>
    <string name="put_button_text">put</string>
    <string name="required_helper_text">* Required</string>
    <string name="notify_hint">Notify!</string>

    <!--products list(recyclerview) layout-->
    <string name="sort_text">Sort:</string>
    <!--products list/grid(recyclerview) item-->
    <string name="days_left_text">\u0020d left</string>
    <string name="expired_shortcut">exp\u0020</string>
    <string name="days_shortcut">d</string>
    <string name="hours_shortcut">h</string>
    <string name="minutes_shortcut">min</string>
    <!--to consume text in a notification-->
    <string name="to_consume_text">to consume</string>
    <string name="delete_text_in_item">Remove</string>

    <!--sort options for products list-->
    <string name="time_left_asc">time left</string>
    <string name="time_left_desc">time left</string>
    <string name="time_added_desc">time added</string>
    <string name="time_added_asc">time added</string>
    <string-array name="sort_by_array">
        <item>@string/time_left_asc</item>
        <item>@string/time_left_desc</item>
        <item>@string/time_added_desc</item>
        <item>@string/time_added_asc</item>
    </string-array>
    <string-array name="sort_by_array_is_asc">
        <item>true</item>
        <item>false</item>
        <item>false</item>
        <item>true</item>
    </string-array>

    <!--notifications-->
    <string name="notifications_channel_name">Keep Your products safe NOTIFICATION CHANNEL</string>
    <string name="notifications_channel_description">Always fresh products by getting notified!</string>
    <string name="notification_button_eaten">EATEN!</string>

    <!--Asking if notify dialog-->
    <string name="notify_question">Notify before expiry?</string>
    <string name="notify_yes">Yes</string>
    <string name="notify_no">No</string>
    <string name="notify_cancel">Cancel</string>
    <string name="notify_hour_text">Hour:</string>
    <string name="notify_days_before_text">Days before expiry:</string>
    <!--Notification options menu-->
    <string name="notification_options_menu_item">Notification options</string>
    <!--Main menu options dialog title-->
    <string name="options_title">Options</string>
    <!--Notification options button-->
    <string name="notification_options_button">Done</string>

    <!--General options dialog-->
    <string name="options_notifications_label">Notifications</string>
    <string name="options_delete_after_expiry_label">Delete after expiry</string>
    <string name="options_days_title">Days:</string>
    <string name="options_never_delete_text">Never!</string>

</resources>
