<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/enter_product_layout_horizontal_padding"
    android:paddingTop="@dimen/enter_product_layout_top_padding"
    android:paddingRight="@dimen/enter_product_layout_horizontal_padding"
    android:paddingBottom="@dimen/enter_product_layout_bottom_padding"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/take_a_photo_button"
            android:layout_width="@dimen/product_image_size"
            android:layout_height="@dimen/product_image_size"
            android:layout_marginRight="@dimen/enter_product_form_components_space"
            android:background="#afafaf"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                app:srcCompat="@drawable/ic_food_image_default" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enter_product_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/enter_product_form_components_space"
                app:helperTextEnabled="true"
                app:endIconTint="@null"
                app:helperText="@string/required_helper_text"
                android:hint="@string/enter_product_text_field_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enter_product_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expiry_date_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/enter_product_form_components_space"
                android:hint="@string/expiry_date_text_field_label"
                android:clickable="true"
                app:helperTextEnabled="true"
                app:endIconTint="@null"
                app:helperText="@string/required_helper_text"
                app:startIconDrawable="@drawable/ic_calendar" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_picker_actions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/put_into_database_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/put_button_text"
                app:icon="@drawable/ic_done" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>