<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:elevation="@dimen/products_main_blocks_elevation">

    <!--main container-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--TODO to delete this container - not needed anymore-->
        <!--choose a product container-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/choose_a_product_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <!--background image-->
            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/wood_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_product_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/choose_product_button_left_margin"
                android:layout_marginTop="@dimen/choose_product_button_top_margin"
                android:layout_marginBottom="@dimen/choose_product_button_bottom_margin"
                android:text="@string/clear_product_button_text"
                app:icon="@drawable/ic_brush_light"
                app:iconSize="@dimen/button_brush_ic_size"
                app:iconTint="@null"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:spanCount="1" />

            <AutoCompleteTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/choose_product_autocomplete_left_margin"
                android:layout_marginRight="@dimen/choose_product_autocomplete_right_margin"
                android:ellipsize="end"
                android:hint="@string/choose_a_product_autocomplete_hint"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/clear_product_button"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--enter product container layout-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/enter_product_layout_horizontal_padding"
            android:paddingTop="@dimen/enter_product_layout_top_padding"
            android:paddingRight="@dimen/enter_product_layout_horizontal_padding"
            android:paddingBottom="@dimen/enter_product_layout_bottom_padding"
            app:layout_constraintTop_toBottomOf="@+id/choose_a_product_container">

            <LinearLayout
                android:id="@+id/take_a_photo_button"
                android:layout_width="@dimen/product_image_size"
                android:layout_height="@dimen/product_image_size"
                android:layout_marginEnd="@dimen/enter_product_capture_photo_space"
                android:layout_marginRight="@dimen/enter_product_capture_photo_space"
                android:background="@drawable/background_border_take_picture"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/enter_product_text_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/product_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_carrot_take_picture" />

                    <ProgressBar
                        android:id="@+id/image_progress_bar"
                        android:layout_width="@dimen/image_progress_indicator_size"
                        android:layout_height="@dimen/image_progress_indicator_size"
                        android:layout_gravity="center"
                        android:visibility="gone" />
                </FrameLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enter_product_text_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_product_text_field_label"
                app:endIconTint="@null"
                app:helperText="@string/required_helper_text"
                app:helperTextEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/expiry_date_text_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/take_a_photo_button">

                <!--choose a product autoComplete-->
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/enter_product_title_autocomplete_edit_text"
                    style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:completionThreshold="2"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expiry_date_text_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/enter_product_between_components_space"
                android:clickable="true"
                android:hint="@string/expiry_date_text_field_label"
                app:endIconTint="@null"
                app:helperText="@string/required_helper_text"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/enter_product_text_field"
                app:layout_constraintTop_toBottomOf="@+id/enter_product_text_field"
                app:startIconDrawable="@drawable/ic_calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_picker_edit_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    tools:layout_editor_absoluteX="117dp"
                    tools:layout_editor_absoluteY="96dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/put_into_database_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/enter_product_between_components_space"
                android:enabled="false"
                android:text="@string/put_button_text"
                app:icon="@drawable/ic_done"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintStart_toStartOf="@+id/expiry_date_text_field"
                app:layout_constraintTop_toBottomOf="@+id/expiry_date_text_field"
                app:spanCount="1" />

            <CheckBox
                android:id="@+id/notify_or_not_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/image_to_notify_checkbox_space"
                android:checked="true"
                android:text="@string/notify_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/take_a_photo_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
